# bookmark-validator

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPENDENCY_INJECTION_SUMMARY.md  DOCKER.md  Dockerfile  GITHUB_ERRORS.md  LICENSE  MODERNIZATION_PLAN.md  Makefile  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  REFACTORING_SUMMARY.md  VALIDATION_CONSOLIDATION_REPORT.md  bandit-report.json  bookmark-processor.spec  bookmark_processor.spec  build_linux.sh  check_imports.py  docker-cleanup.sh  docker-compose.yml  docker-quick-start.sh  fix_tags_from_checkpoint.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_performance_tests.sh  run_tests.py  run_tests_enhanced.py  setup.py  test_batch_processor.py  test_runner_comprehensive.py  verify_performance_tests.sh
.bookmark_costs/: cost_log.json
.claude/: CLAUDE.md  settings.json
.claude/commands/: go.md
.github/workflows/: codeql-analysis.yml  dependency-check.yml  test.yml
.taskmaster/docs/: chrome_expansion_prd.txt  comprehensive_refactoring_prd.txt  prd.txt  prd_cloud_ai.txt
.taskmaster/reports/: task-complexity-report.json
.test_checkpoint_integration/: checkpoint_20250606_222327.json  checkpoint_20250606_222329.json  checkpoint_20250606_222330.json  checkpoint_20250609_040653.json  checkpoint_20250609_040654.json
.test_checkpoint_performance/: checkpoint_20250606_222144.json  checkpoint_20250606_222157.json  checkpoint_20250606_222330.json  checkpoint_20250606_222338.json  checkpoint_20250606_222339.json  checkpoint_20250609_014217.json  checkpoint_20250609_014225.json  checkpoint_20250609_040654.json  checkpoint_20250609_040702.json
.test_error_handling/: checkpoint_20250606_222400.json  checkpoint_20250606_222401.json  checkpoint_20250606_222403.json  checkpoint_20250609_040718.json  checkpoint_20250609_040719.json  checkpoint_20250609_040722.json
bookmark_processor/: __main__.py  cli.py  cli_argparse.py  main.py
bookmark_processor/config/: claude_config.toml.template  configuration.py  configuration_old.py  default_config.ini  large_dataset.toml.template  local_performance.toml.template  migration_utility.py  openai_config.toml.template  pydantic_config.py  user_config.ini.template  user_config.json.template  user_config.toml.template
bookmark_processor/core/: __init__.py  ai_factory.py  ai_processor.py  ai_router.py  async_http_client.py  async_pipeline.py  base_api_client.py  batch_processor.py  batch_types.py  batch_validator.py  bookmark_processor.py  checkpoint_manager.py  chrome_html_generator.py  chrome_html_parser.py  claude_api_client.py  content_analyzer.py  csv_handler.py  data_models.py  database.py  discovery_analyzer.py  duplicate_detector.py  filters.py  folder_generator.py  health_monitor.py  import_module.py  interactive_processor.py  multi_file_processor.py  openai_api_client.py  pipeline.py  processing_modes.py  quality_reporter.py  structured_output.py  tag_config.py  tag_generator.py  url_validator.py
bookmark_processor/core/batch_validator/: __init__.py  cost_tracking.py  performance.py
bookmark_processor/core/data_sources/: __init__.py  csv_source.py  mcp_client.py  protocol.py  raindrop_mcp.py  state_tracker.py
bookmark_processor/core/exporters/: __init__.py  base.py  json_exporter.py  markdown_exporter.py  (+3 more)
bookmark_processor/data/: site_delays.json  user_agents.txt
bookmark_processor/plugins/: __init__.py  base.py  loader.py  registry.py
bookmark_processor/utils/: __init__.py  api_key_validator.py  async_http.py  browser_simulator.py  cli_validators.py  config_validators.py  config_validators_old.py  cost_tracker.py  csv_field_validators.py  data_recovery.py  enhanced_progress.py  error_handler.py  input_validator.py  integrated_validation.py  intelligent_rate_limiter.py  logging_setup.py  memory_optimizer.py  performance_monitor.py  progress_tracker.py  rate_limiter.py  report_generator.py  report_styles.py  retry_handler.py  secure_logging.py  security_validator.py  validation.py
docs/: BRD.md  CHROME_SPEC.md  CLAUDE.md  CLOUD_AI_GUIDE.md  CLOUD_AI_IMPLEMENTATION_PLAN.md  CONFIGURATION.md  FEATURES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ROADMAP.md  INSTALLATION.md  PRD.md  QUICKSTART.md  TDD.md  TROUBLESHOOTING.md  WSL_SETUP.md
docs/archive/: ARCHITECTURE_AUDIT.md  DOCKER_SETUP_SUMMARY.md  PERFORMANCE_TEST_SUMMARY.md
real_data/: chrome.html  raindrop_csv_export.csv
scripts/: python_version_summary.md  validate_platform.py
test_data/: invalid_structure.csv  malformed_bad_urls.csv  malformed_duplicate_ids.csv  malformed_inconsistent_rows.csv  malformed_missing_quotes.csv  malformed_missing_urls.csv  test_input.csv
test_env/: pyvenv.cfg
tests/: README_PERFORMANCE_TESTS.md  conftest.py  test_ai_factory_comprehensive.py  test_ai_router.py  test_ai_router_comprehensive.py  test_async_http.py  test_async_http_client_new.py  test_async_pipeline.py  test_async_pipeline_comprehensive.py  test_async_validator.py  test_base_api_client.py  test_batch_interface_comprehensive.py  test_batch_processor_comprehensive.py  test_batch_validator.py  test_batch_validator_comprehensive.py  test_batch_validator_performance.py  test_bookmark_processor_comprehensive.py  test_checkpoint_resume_integration.py  test_chrome_html_generator.py  test_chrome_html_parser.py  test_claude_api_client.py  test_cli.py  test_cli_argparse.py  test_cli_phase1.py  test_cli_validators_comprehensive.py  test_cloud_ai_integration.py  test_configuration_comprehensive.py  test_core_ai_processor.py  test_core_bookmark_processor.py  test_core_checkpoint_manager.py  test_core_content_analyzer.py  test_cost_tracking_comprehensive.py  test_cost_tracking_integration.py  test_csv_data_source.py  test_csv_handler.py  test_csv_handler_comprehensive.py  test_data_models.py  test_data_recovery.py  test_data_source_protocol.py  test_database.py  (+48 more)
tests/fixtures/: generate_test_data.py  mock_utilities.py  test_data.py
tests/framework/: __init__.py  test_environment.py  test_fixtures.py  test_scenarios.py  test_validators.py
(+21 files in other folders)
