[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmark-processor"
version = "1.0.0"
description = "A powerful Linux/WSL tool that processes raindrop.io bookmark exports to validate URLs, generate AI-enhanced descriptions, and create optimized tagging systems"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Troy Davis"}]
maintainers = [{name = "Troy Davis"}]
keywords = ["bookmarks", "raindrop.io", "url-validation", "ai", "tagging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/davistroy/bookmark-validator"
Repository = "https://github.com/davistroy/bookmark-validator.git"
Issues = "https://github.com/davistroy/bookmark-validator/issues"

[project.scripts]
bookmark-processor = "bookmark_processor.main:main"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for complete workflows",
    "slow: Tests that take longer to run (> 5 seconds)",
    "network: Tests that require network access (mocked)",
    "ai: Tests related to AI processing functionality",
    "security: Security-related tests",
    "performance: Performance and load tests",
    "mock: Tests that heavily rely on mocking",
    "parametrize: Parameterized tests with multiple inputs",
]

[tool.mypy]
python_version = "3.9"
ignore_errors = true
follow_imports = "skip"
warn_unused_configs = false
show_error_codes = false
pretty = false

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "beautifulsoup4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["bookmark_processor"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false